Adds basic remove route/handler, starts tests
