# api/routers/site.js
@@ -9,6 +9,7 @@ router.use(csrfProtection);
 
 router.get('/site', sessionAuth, SiteController.findAllForUser);
 router.post('/site/user', sessionAuth, SiteController.addUser);
+router.put('/site/:site_id/user/:user_id', sessionAuth, SiteController.removeUser);
 router.post('/site', sessionAuth, SiteController.create);
 router.get('/site/:id', sessionAuth, SiteController.findById);
 router.put('/site/:id', sessionAuth, SiteController.update);
